--- a/index.html
+++ b/index.html
@@ -3,24 +3,100 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Body Forge Gym</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="superfit-gym-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Primary Meta Tags -->
+    <title>Body Forge Gym | Best Unisex Gym in Lucknow - Jankipuram</title>
+    <meta
+      name="description"
+      content="Body Forge Gym in Jankipuram, Lucknow offers modern equipment, expert trainers, and personalized fitness programs. Join the best unisex gym in Lucknow and transform your fitness journey!"
+    />
+    <meta name="author" content="Body Forge Gym" />
+    <meta
+      name="keywords"
+      content="best gym in lucknow, jankipuram gym, unisex gym lucknow, fitness center lucknow, bodybuilding gym lucknow, workout in jankipuram, personal trainer lucknow, Body Forge Gym"
+    />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Body Forge Gym | Best Gym in Lucknow - Jankipuram" />
+    <meta
+      property="og:description"
+      content="Transform your fitness at Body Forge Gym, the best unisex gym in Jankipuram, Lucknow. Join today for personalized training and modern facilities!"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta property="og:image" content="https://yourwebsite.com/images/gym-preview.jpg" />
 
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Body Forge Gym | Best Gym in Lucknow - Jankipuram" />
+    <meta
+      name="twitter:description"
+      content="Join Body Forge Gym, Jankipuram — Lucknow’s top unisex fitness destination with certified trainers and modern equipment."
+    />
+    <meta name="twitter:image" content="https://yourwebsite.com/images/gym-preview.jpg" />
+
+    <!-- Schema Markup for Local SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "HealthClub",
+        "name": "Body Forge Gym",
+        "image": "https://yourwebsite.com/images/gym-preview.jpg",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Jankipuram",
+          "addressLocality": "Lucknow",
+          "addressRegion": "Uttar Pradesh",
+          "postalCode": "226021",
+          "addressCountry": "IN"
+        },
+        "telephone": "+91-XXXXXXXXXX",
+        "url": "https://yourwebsite.com",
+        "openingHours": "Mo-Su 05:00-22:00",
+        "sameAs": [
+          "https://www.instagram.com/yourgym",
+          "https://www.facebook.com/yourgym"
+        ]
+      }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
 
   <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <header>
+      <h1>Body Forge Gym - Best Unisex Gym in Lucknow</h1>
+      <p>Your fitness journey starts here at Jankipuram’s finest gym.</p>
+    </header>
+
+    <main id="root">
+      <!-- React App Mount Point -->
+    </main>
+
+    <footer>
+      <section>
+        <h2>Visit Body Forge Gym, Jankipuram</h2>
+        <p>
+          Address: Jankipuram, Lucknow, Uttar Pradesh - 226021<br />
+          Phone: +91-XXXXXXXXXX<br />
+          Hours: 5:00 AM - 10:00 PM (All Days)
+        </p>
+        <p>
+          Follow us on
+          <a href="https://www.instagram.com/yourgym" target="_blank">Instagram</a> |
+          <a href="https://www.facebook.com/yourgym" target="_blank">Facebook</a>
+        </p>
+      </section>
+
+      <section>
+        <p>
+          © 2025 Body Forge Gym | Best Gym in Lucknow | All Rights Reserved.
+        </p>
+      </section>
+    </footer>
+
+    <!-- Scripts -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
